qgis (1.8.0) UNRELEASED; urgency=low

  * new development version 1.8 after branch
  * add qgis browser (qbrowser)
  * add zonal statistics plugins and globe plugin
  * migrate unstable package to dh_python2
  * add ubuntu oneiric

 -- Jürgen E. Fischer <jef@norbit.de>  Tue, 23 Aug 2011 22:25:08 +0200

qgis (1.7.0) UNRELEASED; urgency=low

  * new development version 1.7 after branch
  * add qgis-sqlanywhere1.7.0 package
  * add road graph plugin
  * drop quickprint and ogrconverter plugin
  * add gdal provider
  * turn qgis-providers-common's architecture to all
  * include api documentation
  * Missing ${python:Depends} added to python-qgis dependencies
    (closes: #611492)
  * move qgis_help to /usr/lib/qgis (closes: #615833)

 -- Jürgen E. Fischer <jef@norbit.de>  Thu, 24 Mar 2011 00:24:01 +0100

qgis (1.6.0) UNRELEASED; urgency=low

  * new development version 1.6 after branch
  * qgis-plugin-grass-common breaks earlier versions of qgis-common: add
    control fields.
  * include displacementplugin and offline editing plugin
  * add subversion as build dependency for trunk
  * add qgis-mapserver package
  * trim dependencies
 
 -- Jürgen E. Fischer <jef@norbit.de>  Sun, 17 Oct 2010 12:09:23 +0200

qgis (1.5.0) UNRELEASED; urgency=low

  * new development version 1.5 after branch
  * adapted Francesco Paolo Lovergine's updates to Debian qgis 1.4 package
  * require CMake >2.6 and Qt 4.4
  * remove circular dependencies
  * integrate new GRASS raster provider and remove dependency to
    libgdal1-$VERSION-grass
  * add spatialquery plugin
  * include qgis.g.browser in grass plugin
  * drop symbol tracking as C++ ABIs change too frequently
  * exclude python scripts from grass plugin on lenny
  * add missing dependency to python-sip(4) to python-qgis
  * follow sip4 => sip transition
  * add gdal-bin and python-gdal dependency for GdalTools
  * trim build dependencies

 -- Jürgen E. Fischer <jef@norbit.de>  Wed, 23 Jun 2010 18:34:25 +0200
