@@ -5,8 +5,9 @@ qgis (1.8.0) UNRELEASED; urgency=low
   * add zonal statistics plugins and globe plugin
   * migrate unstable package to dh_python2
   * add ubuntu oneiric
+  * include internal pyspatialite in python-qgis
 
- -- Jürgen E. Fischer <jef@norbit.de>  Tue, 23 Aug 2011 22:25:08 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Thu, 01 Sep 2011 23:20:25 +0200
 
 qgis (1.7.0) UNRELEASED; urgency=low
 
